--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">assignment2-students-app</string>
+    <string name="student_image">student image</string>
 </resources>
